# libraknet

./: .clang-format  CMakeLists.txt  LICENSE
.github/workflows/: build.yml
Lib/: CMakeLists.txt
Lib/DLL/: CMakeLists.txt
Lib/LibStatic/: CMakeLists.txt
Source/: RakNetSocket2.cpp  RakNetSocket2.h  RakNetSocket2_Windows_Linux.cpp  RakPeer.cpp  RakPeer.h  RakPeerInterface.h
include/: AutopatcherPatchContext.h  AutopatcherRepositoryInterface.h  Base64Encoder.h  BitStream.h  CCRakNetSlidingWindow.h  CCRakNetUDT.h  CheckSum.h  CloudClient.h  CloudCommon.h  CloudServer.h  CommandParserInterface.h  ConnectionGraph2.h  ConsoleServer.h  DR_SHA1.h  DS_BPlusTree.h  DS_BinarySearchTree.h  DS_BytePool.h  DS_ByteQueue.h  DS_Hash.h  DS_Heap.h  DS_HuffmanEncodingTree.h  DS_HuffmanEncodingTreeFactory.h  DS_HuffmanEncodingTreeNode.h  DS_LinkedList.h  DS_List.h  DS_Map.h  DS_MemoryPool.h  DS_Multilist.h  DS_OrderedChannelHeap.h  DS_OrderedList.h  DS_Queue.h  DS_QueueLinkedList.h  DS_RangeList.h  DS_Table.h  DS_ThreadsafeAllocatingQueue.h  DS_Tree.h  DS_WeightedGraph.h  DataCompressor.h  DirectoryDeltaTransfer.h  DynDNS.h  (+103 more)
src/: Base64Encoder.cpp  BitStream.cpp  CCRakNetSlidingWindow.cpp  CCRakNetUDT.cpp  CheckSum.cpp  CloudClient.cpp  CloudCommon.cpp  CloudServer.cpp  CommandParserInterface.cpp  ConnectionGraph2.cpp  ConsoleServer.cpp  DR_SHA1.cpp  DS_BytePool.cpp  DS_ByteQueue.cpp  DS_HuffmanEncodingTree.cpp  DS_Table.cpp  DataCompressor.cpp  DirectoryDeltaTransfer.cpp  DynDNS.cpp  EmailSender.cpp  EpochTimeToString.cpp  FileList.cpp  FileListTransfer.cpp  FileOperations.cpp  FormatString.cpp  FullyConnectedMesh2.cpp  GetTime.cpp  Getche.cpp  Gets.cpp  GridSectorizer.cpp  HTTPConnection.cpp  HTTPConnection2.cpp  IncrementalReadInterface.cpp  Itoa.cpp  LinuxStrings.cpp  LocklessTypes.cpp  LogCommandParser.cpp  MessageFilter.cpp  NatPunchthroughClient.cpp  NatPunchthroughServer.cpp  (+67 more)
tests/: CommonFunctions.cpp  CommonFunctions.h  ComprehensiveConvertTest.cpp  ComprehensiveConvertTest.h  ConnectWithSocketTest.cpp  ConnectWithSocketTest.h  CrossConnectionConvertTest.cpp  CrossConnectionConvertTest.h  DebugTools.cpp  DebugTools.h  DroppedConnectionConvertTest.cpp  DroppedConnectionConvertTest.h  EightPeerTest.cpp  EightPeerTest.h  IncludeAllTests.h  LocalIsConnectedTest.cpp  LocalIsConnectedTest.h  ManyClientsOneServerBlockingTest.cpp  ManyClientsOneServerBlockingTest.h  ManyClientsOneServerDeallocateBlockingTest.cpp  ManyClientsOneServerDeallocateBlockingTest.h  ManyClientsOneServerDeallocateTest.cpp  ManyClientsOneServerDeallocateTest.h  ManyClientsOneServerNonBlockingTest.cpp  ManyClientsOneServerNonBlockingTest.h  MaximumConnectTest.cpp  MaximumConnectTest.h  MiscellaneousTestsTest.cpp  MiscellaneousTestsTest.h  OfflineMessagesConvertTest.cpp  OfflineMessagesConvertTest.h  PacketAndLowLevelTestsTest.cpp  PacketAndLowLevelTestsTest.h  PacketChangerPlugin.cpp  PacketChangerPlugin.h  PacketDropPlugin.cpp  PacketDropPlugin.h  PeerConnectDisconnectTest.cpp  PeerConnectDisconnectTest.h  PeerConnectDisconnectWithCancelPendingTest.cpp  (+16 more)
